# davis_utils

./: .gitignore  CMakeLists.txt
.github/workflows/: run-tests.yml
cmake/: AddJUCEModules.cmake  SetupLib.cmake
common/: Identifiers.h  border_bounds_constrainer.cpp  border_bounds_constrainer.h  startup.cpp  startup.h  synth_gui_interface.cpp  synth_gui_interface.h
common/templates/: Factory.h
examples/: CMakeLists.txt
examples/StatefulPlugin/: CMakeLists.txt
interface/: FullInterface.cpp  FullInterface.h  about_section.cpp  about_section.h  common.h  open_gl_component.cpp  open_gl_component.h  open_gl_image.cpp  open_gl_multi_image.cpp  open_gl_multi_quad.h  overlay.h  popup_browser.cpp  popup_browser.h  synth_button.cpp  synth_gui_interface.h  synth_section.cpp  synth_section.h  utils.cpp  utils.h
interface/ParameterView/: ParametersView.cpp  ParametersView.h
interface/components/: synth_button.h  synth_slider.cpp  synth_slider.h
interface/look_and_feel/: curve_look_and_feel.cpp  curve_look_and_feel.h  default_look_and_feel.cpp  default_look_and_feel.h  fonts.cpp  fonts.h  paths.h  shaders.cpp  shaders.h  skin.cpp  skin.h  text_look_and_feel.cpp  text_look_and_feel.h
interface/sections/: header_section.cpp  header_section.h  main_section.cpp  main_section.h  preset_browser.cpp  preset_browser.h
modules/common/davis_core/: davis_core.h
modules/etc/: overlay.h
modules/gui/davis_look_and_feel/: davis_look_and_feel.h
modules/gui/davis_look_and_feel/look_and_feel/: curve_look_and_feel.cpp  curve_look_and_feel.h  default_look_and_feel.cpp  default_look_and_feel.h  fonts.cpp  fonts.h  paths.h  skin.cpp  skin.h  text_look_and_feel.cpp  text_look_and_feel.h
modules/gui/davis_opengl/: davis_opengl.h
new/: open_gl_background.h  open_gl_image.h  open_gl_image_component.cpp  open_gl_image_component.h
old/: README.md  open_gl_background.cpp  open_gl_component.cpp  open_gl_image.h  open_gl_image_component.cpp  open_gl_line_renderer.h  open_gl_multi_quad.h
old/electrosynth/: open_gl_component.cpp  open_gl_component.h  open_gl_image.cpp  open_gl_image_component.cpp  open_gl_image_component.h  open_gl_multi_quad.cpp  open_gl_multi_quad.h
old/updates/: open_gl_background.h  open_gl_component.h  open_gl_line_renderer.cpp  open_gl_line_renderer.h  open_gl_multi_quad.cpp  open_gl_multi_quad.h
tests/: CMakeLists.txt
tests/gui_tests/: CMakeLists.txt
tests/gui_tests/live_gui_test/: CMakeLists.txt
tests/gui_tests/look_and_feel_tests/: CMakeLists.txt  test.cpp
tests/gui_tests/opengl_tests/: CMakeLists.txt  test.cpp
tests/gui_tests/test_test/: CMakeLists.txt  test.cpp
(+26 files in other folders)
